--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jspdf": "^2.5.1",
     "material-icons": "^1.13.12",
     "moment": "^2.30.1",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-loader-spinner": "^6.1.6",
