--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
+    "react-s3": "^1.3.1",
     "react-toastify": "^10.0.4",
     "yup": "^1.4.0"
   },
