--- a/package.json
+++ b/package.json
@@ -38,5 +38,7 @@
     "@tanstack/eslint-plugin-query": "^5.20.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0"
-  }
+  },
+  "type": "module"
+
 }
