--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "material-icons": "^1.13.12",
     "moment": "^2.30.1",
     "next": "^14.1.0",
+    "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-loader-spinner": "^6.1.6",
@@ -38,7 +39,5 @@
     "@tanstack/eslint-plugin-query": "^5.20.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0"
-  },
-  "type": "module"
-
+  }
 }
