--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.12",
     "@tanstack/react-query": "^5.24.7",
     "@tinymce/tinymce-react": "^5.0.1",
+    "aws-sdk": "^2.1646.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "dotenv": "^16.4.5",
@@ -30,7 +31,6 @@
     "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
-    "react-s3": "^1.3.1",
     "react-toastify": "^10.0.4",
     "yup": "^1.4.0"
   },
