--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "yup": "^1.4.0"
   },
